# TF

./: .gitignore  API.md  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION.md  README.md  SDK_SUMMARY.md  SEARCH_OPTIMIZATION.md  example.py  example_sdk.py  example_search_optimized.py  pyproject.toml  requirements.txt  test_basic.py
src/: lib.rs
tests/: test_comprehensive.py
tf/: __init__.py  embeddings.py  pyproject.toml  sdk.py  vector_store.py
tf/tf/: search_result.py  vector_store.py
