[package]
name = "tf"
version = "0.1.0"
edition = "2024"

[lib]
name = "tf_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
vecstore = "1.0.0"
